Fix/footnote spacing (#825)
style: fixing footnote padding and row-gap

--- a/src/components/blocks/Footnote/Footnote.module.scss
+++ b/src/components/blocks/Footnote/Footnote.module.scss
@@ -1,17 +1,25 @@
 @use "../../../styles/utilities/functions" as *;
 @use "../../../styles/mixins/mixins-typo" as *;
 @use "../../../styles/mixins/mixins-rte" as *;
+@use "../../../styles/utilities/mediaqueries" as *;
 
 .section {
   @include rte-text;
 
-  padding-block: px-to-rem(var(--spacing-4xl));
-
-  :first-child {
+  &:first-child {
     margin-block-start: 0;
   }
 
   .text {
     @include body-text-s;
+  }
+}
+
+.sectionFootnote:is([class*="noTitle"]) {
+  row-gap: px-to-rem(var(--spacing-xs));
+  padding-block: px-to-rem(var(--spacing-l)) px-to-rem(var(--text-block-bottom));
+
+  @include mq($from: large) {
+    padding-block: 0 px-to-rem(var(--spacing-4xl));
   }
 }
